--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/GddgdgMen/Meth_lab_2/issues"
   },
-  "homepage": "https://github.com/GddgdgMen/Meth_lab_2#readme"
+  "homepage": "https://github.com/GddgdgMen/Meth_lab_2#readme",
+  "dependencies": {
+    "eslint": "^8.42.0",
+    "jest": "^29.5.0"
+  }
 }
