--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/GddgdgMen/Meth_lab_2#readme",
   "dependencies": {
-    "eslint": "^8.42.0",
     "jest": "^29.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0"
   }
 }
